--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -1,8 +1,22 @@
 {
   "homePage": "الصفحة الرئيسية",
+  "expert": "خبير",
+  "user": "مستخدم",
+
   "onBoarding": "أفضل مكان لأفضل استشارة ...",
   "onBoarding2": "اختر الخبير الذي تحتاجه",
   "onBoarding3": "لنبدأ",
+
+  "signIn": "تسجيل الدخول",
+  "welcome": "مرحبًا بعودتك",
+  "login1": "قم بتسجيل الدخول باستخدام بريدك الإلكتروني وكلمة المرور:",
+  "login2": "ليس لديك حساب؟",
+  "signUp": "إنشاء حساب",
+  "password": "كلمة المرور",
+  "passwordHint": "ادخل كلمة المرور",
+  "email": "البريد الإلكتروني",
+  "emailHint": "أدخل بريدك الالكتروني",
+
   "personalInformation": "معلومات شخصية",
   "name": "اسم",
   "nameHint": "أدخل أسمك",
